--- a/Editor/UnityAgent.Editor.asmdef
+++ b/Editor/UnityAgent.Editor.asmdef
@@ -4,7 +4,8 @@
     "references": [
         "Unity.Editor",
         "Unity.UIElements",
-        "Newtonsoft.Json"
+        "Newtonsoft.Json",
+        "UnityEngine.UI"
     ],
     "includePlatforms": [
         "Editor"
